# jupiter

doc/backtesting/Architecture/: Untitled Diagram.drawio  architecture.drawio  architecture.md
doc/backtesting/CrossSectional/: Cross-sectional_Strategy.md  backtesting_outline.md
src/data/clean/: cffex2csv.py  czce2csv.py  dce2csv.py  gfex2csv.py  shfe2csv.py
src/data/compute/: compute_product_index.py
src/data/compute/select_major/: select_major.py
src/data/generate/bar/: bar.h
src/data/merge/: merge_product.py
src/data/merge/exchange/: README.md  continuous_kline.py  data_processor.py  generate_continuous.py  merge_contracts.py  merge_year.py
src/data/receive/bar/daily/: CMakeLists.txt  crawl_daily.c  crawl_daily.h  destroy.c  fetch_url.c  initialize.c  save.c
src/data/receive/bar/daily/crawler/: README.md  base_crawler.py  binance_crawler.py  cffex_crawler.py  coinbase_crawler.py  czce_crawler.py  dce_crawler.py  exchange-crawler.py  exchange_crawler.py  init_cn_futures.py  init_crypto.py  kraken_crawler.py  requirements.txt  run_crawler.py  utils.py
src/data/receive/tick/: tick.h
src/data/sort/: sort_data.py
src/engine/: README.md
src/match/: match_major_with_signal.py  match_signals.py
src/strategy/cross-sectional/: cross-sectional.py
src/strategy/cross-sectional/0_filter/: filter.py
src/strategy/cross-sectional/1_factor/: factor_compute.py  momentum_compute.py
